<resources>
    <string name="app_name">FoodEx</string>
    <string name="title_register">Зарегистрироваться</string>
    <string name="title_authorize">Авторизоваться</string>
    <string name="tab_client">Клиент</string>
    <string name="tab_restorator">Ресторатор</string>
    <string name="user_name">Имя пользователя</string>
    <string name="hint_email">Введите ваш email</string>
    <string name="hint_password">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="hint_login_rest">Введите логин</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password_input">Пароль</string>
    <string name="hint_repeat_password">Повторите пароль</string>
    <string name="title_instruction">Заполните следующие поля</string>
    <string name="hint_phone_number">Номер телефона</string>
    <string name="incorrect">Логин и пароль не совпадают!</string>
    <string name="forget_password">Забыли пароль?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restorator_main">RestoratorMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_client_main">ClientMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="types">
        <item>Бургерная</item>
        <item>Ресторан</item>
        <item>Кафе</item>
        <item>Кофейня</item>
        <item>Кондитерская</item>
        <item>Шаурмичная</item>
    </string-array>
</resources>
