<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="groshevdg.foodex.ui.register.RegisterAsRestoratorFragment"
    android:background="@drawable/login_back">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintVertical_bias="0.35"
        android:id="@+id/card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_instruction"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="25dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:textColorHint="@android:color/black"
                android:id="@+id/edit_text_login"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/hint_password_input"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_login"
                app:layout_constraintStart_toStartOf="@+id/edit_text_login"
                app:layout_constraintTop_toBottomOf="@id/edit_text_login" />

            <EditText
                android:id="@+id/edit_text_repeat_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/hint_repeat_password"
                android:inputType="textPassword"
                android:textColorHint="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edit_text_password"
                app:layout_constraintTop_toBottomOf="@id/edit_text_password" />

            <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:textColorHint="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edit_text_repeat_password"
                app:layout_constraintTop_toBottomOf="@id/edit_text_repeat_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/title_register"
        android:textSize="@dimen/text_size"
        android:background="@drawable/button_custom_background"
        android:textColor="@color/colorText"
        android:padding="14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>