<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="groshevdg.foodex.ui.choose_action.ChooseActionActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/card">

    </androidx.cardview.widget.CardView>


    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="74sp"
        android:paddingHorizontal="24dp"
        android:textColor="@color/colorText"/>
    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_register"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/title_register"
        android:textSize="@dimen/text_size"
        android:background="@drawable/button_custom_background"
        android:textColor="@color/colorText"
        android:padding="14dp" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="80dp"
        android:text="@string/title_authorize"
        android:textSize="@dimen/text_size"
        android:background="@drawable/button_custom_background"
        android:textColor="@color/colorText"
        android:padding="14dp" />

</androidx.constraintlayout.widget.ConstraintLayout>